Ensure to not clip windows when painting the cube

BUG: 325432
FIXED-IN: 4.11.3